[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/refactored/Part/SubPart/StorageDescriptionShort.tscn" type="PackedScene" id=1]
[ext_resource path="res://StorageDescriptionLong.gd" type="Script" id=2]
[ext_resource path="res://arts/artText/textoPequeno.tres" type="DynamicFont" id=3]

[node name="StorageDescriptionLong" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TypeB" parent="." index="2"]
anchor_top = 0.4
anchor_bottom = 1.0

[node name="TypeC" parent="." index="3"]
anchor_top = 0.8

[node name="TypeD" type="Label" parent="." index="4"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -17.0
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
custom_fonts/font = ExtResource( 3 )
text = "TypeD - 10000"
